Updated layout using flexbox.

--- a/css/main.css
+++ b/css/main.css
@@ -125,20 +125,29 @@ main {
 header,
 footer,
 main {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;  
 }
 
 .flex-container {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    justify-content: space-between; 
 }
 
 .flex-items {
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  width: 30%;
-  height: 200px;
+    color: #fff;
+    line-height: 1.5em;
+    font-size: 1.6em;
+    background-color: #f16059;
+    width: 30%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
 }
 
 /* ==========================================================================
